# Training

./: .gitignore  LICENSE  README.md  RectangleArea_Perimeter.java  maxOf2.java
Rust Training/Axum/: Cargo.toml
Rust Training/Axum/src/: SimpleProgram.rs  composition_and_static_routing.rs  configuration.rs  database_integration.rs  generate_random_number.rs  json_crud.rs  main.rs  user_agent.rs
Rust Training/Axum/src/data/: Employee.json  Master_Data.json
Rust Training/Axum/src/resources/: config-dev.json  config.json
Rust Training/crud_grpc_server/: Cargo.toml  build.rs
Rust Training/crud_grpc_server/proto/: customerService.proto  employee.proto  student.proto
Rust Training/crud_grpc_server/src/: CustServiceCrudMethod.rs  EmpCrudMethods.rs  StudCrudMethod.rs  server.rs
Rust Training/crud_grpc_server/src/Services/: CustomerService.rs  EmployeeService.rs  StudentSerivce.rs  mod.rs
Rust Training/crud_grpc_server/src/data/: Employee.json  Master_Data.json  StudentData.json
Rust Training/crud_grpc_server/src/utils/: idAutoIncrementer.rs  mod.rs
Rust Training/modules_task/: Cargo.toml
Rust Training/modules_task/src/: common.rs  main.rs
Rust Training/modules_task/src/axum_task/: health_check.rs  mod.rs  model.rs  routes.rs
Rust Training/modules_task/src/employee_task/: employee_processing.rs  file_operations.rs  mod.rs
Rust Training/modules_task/src/frequency_task/: frequency.rs  mod.rs  replacement.rs
Rust Training/modules_task/src/hashmap/: mod.rs
Rust Training/modules_task/src/student_task/: file_operations.rs  mod.rs
Rust Training/modules_task/src/table_task/: PageAndWidthCalculation.rs  file_operations.rs  mod.rs  processing.rs
Rust Training/modules_task/src/task_assigner/: Executivesdatachanger.rs  bifurcator.rs  decisionmaker.rs  mod.rs  (+4 more)
(+100 files in other folders)
