[package]
name = "Axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json ="1.0.111"
tower-http = {version="0.4.1",features=["fs"]}
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
