[package]
name = "crud_grpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[dependencies]
prost = "0.12"
tonic="0.11.0"
tokio = { version = "1.36.0", features = ["full"] }
serde_json ="1.0.111"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"



[build-dependencies]
tonic-build="0.11.0"
