[package]
name = "modules_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json ="1.0.111"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
chrono = "0.4.33"
rand = "0.8.5"
hyper = "0.14.28"
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
axum = { version = "0.7.4", features = ["multipart"] }
tower = { version = "0.4.13", features = ["full"]}
config = "0.14"
tokio = { version = "1.36.0", features = ["full"] }
tikv-client = "0.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
